fixed overflow issue

--- a/static/css/landingPage.css
+++ b/static/css/landingPage.css
@@ -1,21 +1,30 @@
   /* base styles */
+  html {
+    overflow-x: hidden;
+  }
+
   body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: tomato;
     font-size: 18px;
+    overflow-x: hidden;
   }
+
   h1 {
     color: tomato;
     font-size: 32px;
   } 
+
   h5 {
     color: tomato;
     font-size: 18px;
   }
+
   b {
     color: black;
     font-size: 50px;
   }
+
   button { 
     color: white;
     background-color: tomato;
@@ -41,12 +50,14 @@
     padding: 20px;
     margin: 10px;
   }
+
   .navbar > ul {
     display: flex;
     flex-direction: row;
     list-style: none;
     margin: 10px;
   }
+
   .navbar li {
     padding: 1em;
     justify-items: center;
@@ -80,6 +91,7 @@
     height: 300px;
     /* margin: 10px; */
   }
+
   .equality-Brightact {
     width: 150px;
     margin: 10px;
@@ -88,6 +100,7 @@
     left: 45%;
     top: 40px;
   }
+
   .equality-paragraph h1 {
     font-size: 30px;
     margin: 10px;
@@ -107,21 +120,24 @@
     margin: 10px;
     top: 30px;
   }
+
   /* carousel~ slides */
   #slides {
-      width: 1000px;
-      height: 800px;
-      margin: auto;
+    width: 1000px;
+    height: 800px;
+    margin: auto;
   }
+
   .play-slide-indicators {
-      z-index: 1;
-      height:100%;
-      width: 100%;
-      display: flex; 
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center
+    z-index: 1;
+    height:100%;
+    width: 100%;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center
   }
+
   .slide-layout {
     position: relative;
     top: -782px;
@@ -133,6 +149,7 @@
         -ms-flex-direction: column;
             flex-direction: column;
   }
+
   .slide-layout-2 {
     position: relative;
     top: -1048px;
@@ -144,6 +161,7 @@
         -ms-flex-direction: column;
             flex-direction: column;
   }
+
   .carousel-caption {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -151,6 +169,7 @@
     height: 100%;
     font-size: 20px;
   }
+
   .slides-inner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -165,10 +184,12 @@
     -webkit-transition: 1000ms;
     transition: 1000ms;
   }
+
   .play-slide-show {
     overflow: hidden;
     position: relative;
   }
+
   .play-next-button, .play-previous-button {
     display: block;
     width: 40px;
@@ -189,9 +210,11 @@
         -ms-flex-align: center;
             align-items: center;
   }
+
   .play-next-button {
     right: 1em;
   }
+
   .play-next-button::after {
     content: '';
     display: block;
@@ -202,9 +225,11 @@
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
   }
+
   .play-previous-button {
     left: 1em;
   }
+
   .play-previous-button::after {
     content: '';
     display: block;
@@ -234,16 +259,19 @@
     height: 600px;
     /* margin: 10px; */
   }
+
   .domestic-title {
     height: 400px;
     position: relative;
     top: 22%;
     text-align: center;
   }
+
   .domestic-title a {
     font-size: 88px;
     line-height: 79px;
   }
+
   .domestic-subtitle {
     /* border: solid black .5px; */
     width: 700px;
@@ -264,6 +292,7 @@
     height: 400px;
     /* margin: 10px; */
   }
+
   .quiz-title a {
     width: 300px;
     height: 200px;
@@ -273,6 +302,7 @@
     left: 17%;
     top: 100px
   }
+
   .quiz-subtitle {
     color: rgb(0, 33, 133);
     font-size: 22px;
@@ -280,11 +310,13 @@
     top: 31%;
     left:17%;
   }
+
   .quiz-button {
     position: relative;
     left: 18%;
     top: 28%;
   }
+
   .quiz-button button {
     width: 200px;
     position: relative;
@@ -301,6 +333,7 @@
     width: 100%;
     height: 500px;
   }
+
   .getinvolved-title {
     width: 880px;
     align-items: center;
@@ -312,10 +345,12 @@
     left: 25%;
     text-align: center;
   }
+
   .getinvolved-title a {
     font-size: 66px;
     line-height: 60px;
   }
+
   .getinvolved-subtitle {
     width: 900px;
     align-items: center;
@@ -325,13 +360,16 @@
     top:-105px;
     left: 24%;
   }
+
   .getinvolved-subtitle a {
     font-size: 17px;
     position: relative;
   }
+
   .getinvolved-subtitle b {
     font-size: 24px;
   }
+
   .getinvolved-button button {
     position: relative;
     left: 45%;
@@ -403,6 +441,7 @@
     font-size: 9px;
     width: 300px;
   }
+
   .abuse-2 h1 {
     color: black;
     font-size: 35px;
@@ -431,6 +470,7 @@
     font-size: 10px;
     width: 300px;
   }
+
   .abuse-3 h1 {
     color: black;
     font-size: 35px;
@@ -475,6 +515,7 @@
     width: 100%;
     height: 700px;
   }
+
   .men-img {
     /* border: solid .5px black; */
     position: relative;
@@ -482,6 +523,7 @@
     width: 300px;
     top: 70px;
   }
+
   .men h1 {
     width: 550px;
     font-size: 24px;
@@ -490,9 +532,11 @@
     top: 70px;
     word-spacing: 5px;
   }
+
   .men b {
     font-size: 40px;
   }
+
   .men button {
     position: relative;
     left: 26%;
@@ -508,6 +552,7 @@
     width: 100%;
     height: 890px;
   }
+
   .covid-title { 
     width: 790px;
     text-align: center;
@@ -515,6 +560,7 @@
     top: 60px;
     left: 30%;
   }
+
   .covid-subtitle {
     width: 500px;
     text-align: center;
@@ -522,30 +568,33 @@
     top: 50px;
     left: 40%;
   }
+
   .covid1 {
     position: relative;
     top: 90px;
     left: 30%;
     width: 300px;
   }
+
   .covid2 {
     position: relative;
     top: -310px;
     left: 55%;
     width: 300px;
-
   }
+
   .covid-19 h1 {
     font-size: 50px;
   }
 
   .covid-19 h5 {
     /* color: black; */
-
   }
+
   .covid-19 small {
     font-size: 19px;
   }
+
   .covid-19 button {
     position: relative;
     left: 45%;
@@ -577,6 +626,7 @@
     width: 100%;
     height: 700px;
   } 
+  
   .eu-innovation h1 {
     font-size: 45px;
     color: rgb(4, 4, 148);
